<resources>
    <string name="app_name">ProjectApp</string>
    <string name="list">list</string>
    <string name="calendar">calendar</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="run">Run</string>
    <string name="my_speed">My Speed</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="temperature">Temperature:</string>
    <string name="data">Date:</string>
    <string name="open_run_training">Open run training</string>
    <string name="time2">Time</string>
    <string name="speed2">Speed</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
</resources>