<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    android:padding="10dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/green">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run"
            android:id="@+id/run_title"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/run_info"
            android:layout_below="@+id/run_title"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distance"
                android:textSize="20sp"
                android:text="@string/distance"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/distance"
                android:layout_marginStart="30dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spec_title">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:id="@+id/speed_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:id="@+id/time_title"
                        android:layout_below="@+id/speed_title"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:id="@+id/temp_title"
                        android:layout_below="@+id/time_title"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data"
                        android:id="@+id/date_title"
                        android:layout_below="@+id/temp_title"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/spec_title"
                    android:layout_marginStart="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/speed"
                        android:text="actual speed"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time"
                        android:text="actual time"
                        android:layout_below="@+id/speed"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/temp"
                        android:text="actual temp"
                        android:layout_below="@+id/time"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:text="actual Date"
                        android:layout_below="@+id/temp"
                        android:layout_marginTop="5dp"/>


                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>